--- a/ServerOfZuul/src/main/resources/application.properties
+++ b/ServerOfZuul/src/main/resources/application.properties
@@ -12,8 +12,13 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 zuul.ignored-services=*
 
 # Map paths to services
+# Gallery service
 zuul.routes.gallery-service.path=/gallery/**
 zuul.routes.gallery-service.service-id=gallery-service
+# Gallery service
+zuul.routes.image-service.path=/image/**
+zuul.routes.image-service.service-id=image-service
+# Auth service
 uul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=AUTH-SERVICE
 zuul.routes.auth-service.strip-prefix=false
